# light-md-editor

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: project-changelog.md  system-architecture.md
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/editor/: mermaid-block.tsx  mermaid-node-view.ts  milkdown-editor.tsx
src/components/sidebar/: sidebar.tsx
src/components/status-bar/: status-bar.tsx
src/components/toolbar/: toolbar.tsx
src/lib/: drafts.ts  editor-config.ts  file-operations.ts  mermaid.ts  recent-files.ts  tauri-window.ts  theme.ts
src/stores/: app-store.ts
src/styles/: editor-theme.css  globals.css  layout.css  mermaid.css
