[package]
name = "light-md-editor"
version = "0.2.0"
description = "Lightweight Markdown Editor — Windows-first with macOS support"
authors = ["Pavel Volkov <pvolkov@live.ru>"]
edition = "2021"

[lib]
name = "light_md_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard-manager = "=2.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
